--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "点餐",
+    "name" : "第七面酒馆",
     "appid" : "__UNI__9006321",
-    "description" : "",
+    "description" : "第七面酒馆点餐",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
